Feature/iot 1249 manage kombit users (#82)
* First changes to management of kombit users.

* i18n translations

* Made the form page for entering email and wanted organizations. Redirect to new page when entering and succes. Not possible to enter awaiting-page or new-user page manually by url

* NewKombitUser page done, ready for user information page

* User page. Need to fix console error "undefined length"

* Changed name so it's more clear that it's requestedOrganizations and not actual organizations. Started on moving userpage link and login to top right corner.

* moved help and log out buttons to top right corner

* Next step is to fit padding in top bar. Styling.

* Css styling

* removing if statement. Top bar should visible when first time entering from kombit

* Sending an array of ids instead of org object. OBS on undefined on find.

* fixed undefined on find. Changed some variable names. Removed search bar and user-page when first time login from kombit, but possible to log out.

* Made admin/users so there is two tables. One for existing users and one for users applying. Next step is to make the approve and reject buttons and functionality.

* Made acceptuser page when some user is requesting access to organization.

* Can only press once. Also changed back so new-user back is only called when a user from kombit is logged in and has no email. This specific flow has not been tested since it's not possible to create a test kombit user locally.

* Changed some endpoints so page is allowed

* Changed RejectUserDto to have all the info about the rejected user

Minor code improvements

* Minor code style improvements

Co-authored-by: August Andersen <aha@iterator-it.dk>
Co-authored-by: nlg <nlg@iterator-it.dk>

--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -1,79 +1,161 @@
 <div class="row top-bar-wrapper">
   <div class="top-bar">
-
-    <div class="col-12">
-      <div class="row">
-        <div class="col-md-8 my-3 m-md-0 top-bar--menu">
-          <!-- Breadcrumb -->
-          <nav class="top-bar--menu--breadcrumb">
-            <ng-template [ngIf]="backButtonTitle">
-              <fa-icon [icon]="faChevronLeft" class="icon--primary mb-1"></fa-icon>
-              <a (click)="routeTo()" class="back-button" [routerLink]="">{{backButtonTitle}}</a>
-            </ng-template>
-            <ng-template [ngIf]="data || subPage === true">
-              <fa-icon [icon]="faChevronLeft" class="icon--primary mb-1"></fa-icon>
-              <a (click)="routeTo()" class="back-button" [routerLink]="">{{backButton.label}}</a>
-              <h3 class="p-3">{{subTitle || staticTitle}}</h3>
-            </ng-template>
-            <ng-template [ngIf]="title">
-              <h4 *ngIf="component; else notComponent">{{title || staticTitle}}</h4>
-              <ng-template #notComponent>
-                <h3 class="pl-md-3">{{title || staticTitle}}</h3>
+    <div class="topbarWidth">
+      <div class="col">
+        <div class="row">
+          <div class="col-md-7 my-3 m-md-0 top-bar--menu">
+            <!-- Breadcrumb -->
+            <nav class="top-bar--menu--breadcrumb">
+              <ng-template [ngIf]="backButtonTitle">
+                <fa-icon
+                  [icon]="faChevronLeft"
+                  class="icon--primary mb-1"
+                ></fa-icon>
+                <a (click)="routeTo()" class="back-button" [routerLink]="">{{
+                  backButtonTitle
+                }}</a>
               </ng-template>
-            </ng-template>
-          </nav>
+              <ng-template [ngIf]="data || subPage === true">
+                <fa-icon
+                  [icon]="faChevronLeft"
+                  class="icon--primary mb-1"
+                ></fa-icon>
+                <a (click)="routeTo()" class="back-button" [routerLink]="">{{
+                  backButton.label
+                }}</a>
+                <h3 class="p-3">{{ subTitle || staticTitle }}</h3>
+              </ng-template>
+              <ng-template [ngIf]="title">
+                <h4 *ngIf="component; else notComponent">
+                  {{ title || staticTitle }}
+                </h4>
+                <ng-template #notComponent>
+                  <h3 class="pl-md-3">{{ title || staticTitle }}</h3>
+                </ng-template>
+              </ng-template>
+            </nav>
 
-          <!-- action buttons -->
-          <div class="action-group d-flex justify-content-end">
-
-            <button *ngIf="ctaRouterLink && ctaRouterLink != '' && canEdit" [routerLink]="ctaRouterLink" routerLinkActive="active"
-              class="btn btn-primary mr-1" type="button" [attr.aria-label]="ctaLabel">{{ctaLabel}}</button>
-
-            <button *ngIf="dtRouterLink && dtRouterLink != ''" [routerLink]="dtRouterLink" routerLinkActive="active"
-            class="btn btn-primary mr-1" type="button" [attr.aria-label]="dtLabel">{{dtLabel}}</button>
-
-            <div class="btn-group float-md-right dropdown" *ngIf="dropDownButton && addDetailDowndown === true && canEdit">
-              <button type="button" id="dropdown-{{ data.name }}" class="btn btn-primary dropdown-toggle"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{dropDownButton.label}} <span class="caret"></span>
+            <!-- action buttons -->
+            <div class="action-group d-flex justify-content-end">
+              <button
+                *ngIf="ctaRouterLink && ctaRouterLink != '' && canEdit"
+                [routerLink]="ctaRouterLink"
+                routerLinkActive="active"
+                class="btn btn-primary mr-1"
+                type="button"
+                [attr.aria-label]="ctaLabel"
+              >
+                {{ ctaLabel }}
               </button>
-              <ul class="dropdown-menu" attr.aria-labelledby="dropdown-{{ data.name }}">
-                <li class="dropdown-item">
-                  <a [routerLink]="dropDownButton.editRouterLink">{{ 'TOPBAR.DROPDOWN.EDIT' | translate }}
-                  </a>
-                </li>
+
+              <button
+                *ngIf="dtRouterLink && dtRouterLink != ''"
+                [routerLink]="dtRouterLink"
+                routerLinkActive="active"
+                class="btn btn-primary mr-1"
+                type="button"
+                [attr.aria-label]="dtLabel"
+              >
+                {{ dtLabel }}
+              </button>
+
+              <div
+                class="btn-group float-md-right dropdown"
+                *ngIf="dropDownButton && addDetailDowndown === true && canEdit"
+              >
+                <button
+                  type="button"
+                  id="dropdown-{{ data.name }}"
+                  class="btn btn-primary dropdown-toggle"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  {{ dropDownButton.label }} <span class="caret"></span>
+                </button>
+                <ul
+                  class="dropdown-menu"
+                  attr.aria-labelledby="dropdown-{{ data.name }}"
+                >
+                  <li class="dropdown-item">
+                    <a [routerLink]="dropDownButton.editRouterLink"
+                      >{{ 'TOPBAR.DROPDOWN.EDIT' | translate }}
+                    </a>
+                  </li>
                 <ng-container *ngIf="dropDownButton.extraOptions?.length > 0">
                   <li class="dropdown-item" *ngFor="let option of dropDownButton.extraOptions">
                     <a (click)="onClickExtraDropdownOption(option.id)">{{ option.label }}</a>
                   </li>
                 </ng-container>
-                <li class="dropdown-item" *ngIf="dropDownButton.isErasable === true">
-                  <a (click)="onClickDelete()">{{ 'TOPBAR.DROPDOWN.DELETE' | translate }}
-                  </a>
-                </li>
-              </ul>
+                 <li
+                   class="dropdown-item"
+                   *ngIf="dropDownButton.isErasable === true"
+                 >
+                   <a (click)="onClickDelete()"
+                      >{{ 'TOPBAR.DROPDOWN.DELETE' | translate }}
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-4 order-first order-md-last search-form-wrapper">
-          <!-- Search  -->
+          <div class="col-md-5 order-first order-md-last search-form-wrapper">
+            <!-- Search  -->
 
-          <form class="search-form">
-            <mat-form-field class="search-form--full-width">
-              <mat-label>{{ 'SEARCH.PLACEHOLDER' | translate }}</mat-label>
-              <input matInput id="searchQuery" class="search--input" aria-label="Search" #searchInput
-                [value]="decode(searchQuery)" (keyup.enter)="search(searchInput.value)">
-              <a matSuffix class="has-pointer" (click)="search(searchInput.value)">
-                <div class="search-icon">
-                  <fa-icon [icon]="faSearch"></fa-icon>
-                  {{ 'TOPBAR.SEARCH.BUTTON' | translate }}
-                </div>
-              </a>
-            </mat-form-field>
-          </form>
+            <form *ngIf="hasEmail() && hasAnyPermission()" class="search-form">
+              <mat-form-field class="search-form--full-width">
+                <mat-label >{{ 'SEARCH.PLACEHOLDER' | translate }}</mat-label>
+                <input
+                  matInput
+                  id="searchQuery"
+                  class="search--input"
+                  aria-label="Search"
+                  #searchInput
+                  [value]="decode(searchQuery)"
+                  (keyup.enter)="search(searchInput.value)"
+                />
+                <a
+                  matSuffix
+                  class="has-pointer"
+                  (click)="search(searchInput.value)"
+                >
+                  <div class="search-icon">
+                    <fa-icon [icon]="faSearch"></fa-icon>
+                  </div>
+                </a>
+              </mat-form-field>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="marginLeft col-md-auto order-md-last search-form-wrapper">
+        <div class="mobileMedia">
+          <button mat-icon-button [matMenuTriggerFor]="menu" id="userDropdown">
+            <fa-icon [icon]="faUser" class="icon--primary mb-1"></fa-icon>
+          </button>
+          <mat-menu class="matMenuMargin" xPosition="before" #menu="matMenu">
+            <button mat-menu-item class="userNameFont userName">
+              {{ getUsername() }}
+            </button>
+            <a *ngIf="hasEmail()" mat-menu-item routerLink="/user-page"
+              >{{ 'USER_PAGE.USER_PAGE' | translate }}
+            </a>
+            <a
+              mat-menu-item
+              [attr.href]="getKombitLogoutUrl() ? getKombitLogoutUrl() : null"
+              target="{{ isLoggedInWithKombit() ? '_blank' : undefined }}"
+              (click)="onLogout()"
+              >{{ 'NAV.LOGOUT' | translate }}
+            </a>
+          </mat-menu>
+          <button mat-icon-button type="button" id="help" (click)="goToHelp()">
+            <fa-icon
+              [icon]="faQuestionCircle"
+              class="icon--primary mb-1"
+            ></fa-icon>
+          </button>
         </div>
       </div>
     </div>
-
-
   </div>
+</div>
