Fixed redirect to new-user page when logging in with KOMBIT

--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
                 <div class="error-page__logo-box">
-                    <img src="../../assets/images/OS2-iot-svg.svg" alt="Logo" class="error-page__logo">
+                    <img src="../../assets/images/os2iot.png" alt="Logo" class="error-page__logo">
                 </div>
             </div>
         </div>
