Visualize gateway traffic and status (#85)
* Fetch single gateway

* Add empty gateway graphs.

* Visualize gateway packages

* Fix date and merge

Co-authored-by: nlg <nlg@iterator-it.dk>

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,6 +94,10 @@ body {
   white-space: pre-line;
 }
 
+.mat-card-header-text-ml-0 .mat-card-header-text {
+  margin-left: 0;
+}
+
 .welcome-screen .mat-dialog-container {
   background-color: #55b156;
 }
