--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -46,36 +46,54 @@
 <div class="row">
     <div class="col-12">
         <div class="jumbotron">
-            <h3>{{ 'GATEWAY.STATS' | translate }}</h3>
-            <div class="mat-elevation-z8">
-                <div class="loading-shade" *ngIf="isLoadingResults">
-                    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-                </div>
-                <table mat-table [dataSource]="dataSource">
-                    <ng-container matColumnDef="rxPacketsReceived">
-                        <th mat-header-cell *matHeaderCellDef>
-                            {{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}
-                        </th>
-                        <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
-                    </ng-container>
+          <app-gateway-status [isVisibleSubject]="isGatewayStatusVisibleSubject" [gatewayId]="id" paginatorClass="d-none"
+              [shouldLinkToDetails]="false" [title]="'GATEWAY.ONLINE-STATUS' | translate">
+            </app-gateway-status>
+        </div>
 
-                    <ng-container matColumnDef="txPacketsEmitted">
-                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}
-                        </th>
-                        <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="txPacketsReceived">
-                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
-                        <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-                <mat-paginator [length]="resultLength" [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons>
-                </mat-paginator>
+        <div class="jumbotron">
+            <h3>{{ 'GATEWAY.DATA-PACKETS' | translate }}</h3>
+            <div class="loading-shade" *ngIf="isLoadingResults">
+                <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
             </div>
+
+            <div class="d-flex flex-row mb-4">
+              <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
+                <app-graph [data]="receivedGraphData" [type]="'line'" [title]="'GATEWAY.STATS-RXPACKETSRECEIVED' | translate"
+                  [graphCardClass]="'shadow-none pl-0'" [graphHeaderClass]="'mat-card-header-text-ml-0'">
+                </app-graph>
+              </div>
+              <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
+                <app-graph [data]="sentGraphData" [type]="'line'" [title]="'GATEWAY.STATS-TXPACKETSEMITTED' | translate"
+                  [graphCardClass]="'shadow-none pl-0'" [graphHeaderClass]="'mat-card-header-text-ml-0'">
+                </app-graph>
+              </div>
+            </div>
+
+            <table mat-table [dataSource]="dataSource">
+                <ng-container matColumnDef="rxPacketsReceived">
+                    <th mat-header-cell *matHeaderCellDef>
+                        {{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}
+                    </th>
+                    <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="txPacketsEmitted">
+                    <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}
+                    </th>
+                    <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
+                </ng-container>
+
+                <ng-container matColumnDef="txPacketsReceived">
+                    <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
+                    <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [length]="resultLength" [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons>
+            </mat-paginator>
         </div>
     </div>
 </div>
