Show overview of gateway status (#84)
* Init gateway status overview.

Styling not done. Dummy data

* Adjust gateway status for responsiveness. Added TODOs

* Implement gateway status fetch. Update styling and TODOs

* Reset table page. Update gateway status logic and styling

* Add parent options for paginator and title

* Fix gateway status not fetching on interval change

* Optimize performance on gateway status

* Add comment to latest timestamp method

* Visualize gateway traffic and status (#85)

* Fetch single gateway

* Add empty gateway graphs.

* Visualize gateway packages

* Fix date and merge

Co-authored-by: nlg <nlg@iterator-it.dk>

Co-authored-by: nlg <nlg@iterator-it.dk>

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,12 +1,12 @@
-<mat-card class="chart-container">
-  <mat-card-header *ngIf="title">
+<mat-card class="chart-container" [ngClass]="graphCardClass">
+  <mat-card-header *ngIf="title"  [ngClass]="graphHeaderClass">
     <mat-card-title>
       {{title}}
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="no-data-container" *ngIf="isGraphEmpty">
-      <h3>{{ 'GRAPH.NO-DATA' | translate }}</h3>
+      <span class="text--big">{{ 'GEN.NO-DATA' | translate }}</span>
     </div>
     <canvas #someGraph [ngClass]="{'width-100': isGraphEmpty}"></canvas>
   </mat-card-content>
