--- a/src/app/gateway/gateway-list/gateway-list.component.html
+++ b/src/app/gateway/gateway-list/gateway-list.component.html
@@ -7,7 +7,7 @@
       [dropdownLabel]="'GATEWAY.DROPDOWNFILTER' | translate" (updateSelectedOpt)="setOrgIdFilter($event)"
       [dropdownDefaultOption]="'GATEWAY.DROPDOWNDEFAULT' | translate">
     </app-top-bar-table>
-    <mat-tab-group animationDuration="200ms" (selectedTabChange)="showMap($event)">
+    <mat-tab-group animationDuration="200ms" (selectedTabChange)="selectedTabChange($event)">
       <mat-tab label="{{'GATEWAY.TABEL-TAB' | translate}}">
         <div class="jumbotron--table">
           <app-gateway-table [organisationChangeSubject]="organisationChangeSubject">
@@ -18,6 +18,12 @@
         <div class="jumbotron--table" *ngIf="showmap && gateways">
           <app-map [coordinateList]="coordinateList">
           </app-map>
+        </div>
+      </mat-tab>
+      <mat-tab label="{{'LORA-GATEWAY-TABLE.STATUS' | translate}}">
+        <div class="jumbotron--table">
+          <app-gateway-status [organisationChangeSubject]="organisationChangeSubject"
+            [isVisibleSubject]="isGatewayStatusVisibleSubject"></app-gateway-status>
         </div>
       </mat-tab>
     </mat-tab-group>
