Fixed getting the applications for User Groups

--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -26,15 +26,15 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" *ngIf="showApplicationTable">
             <div class="col-12">
                 <div class="jumbotron">
                     <h3>
                         {{ 'PERMISSION.DETAIL.APPLICATIONS' | translate }}
                     </h3>
 
-                    <app-applications-table *ngIf="showApplicationTable" [permissionId]="id" [organizationId]="permission.organization?.id">
-                    </app-applications-table>
+                    <app-applications-table *ngIf="!isApplicationAdmin()" [permissionId]="id" [organizationId]="permission.organization?.id"></app-applications-table>
+                    <app-applications-table *ngIf="isApplicationAdmin()"></app-applications-table>
                 </div>
             </div>
         </div>
