Update welcome dialog text

--- a/src/app/shared/components/welcome-dialog/welcome-dialog.component.html
+++ b/src/app/shared/components/welcome-dialog/welcome-dialog.component.html
@@ -20,8 +20,7 @@
     <p>{{'WELCOME-DIALOG.WELCOME-MESSAGE-3' | translate}}
       <span>
         <a href="https://os2.eu/produkt/os2iot" target="_blank">{{'WELCOME-DIALOG.LINK-2' |
-          translate}}
-        </a>.
+          translate}}</a>
       </span>
       {{'WELCOME-DIALOG.WELCOME-MESSAGE-4' | translate}}
       <span>
