Don't wrap gateway status footer

--- a/src/app/gateway/gateway-status/gateway-status.component.html
+++ b/src/app/gateway/gateway-status/gateway-status.component.html
@@ -37,7 +37,7 @@
         [matTooltipClass]="'status-tooltip'"
         [ngClass]="gateway.statusTimestamps | gatewayStatusClass: time.exactTimestamp"></td>
       <td mat-footer-cell *matFooterCellDef=" let gateway"
-        [ngClass]="{'invisible': index % visibleFooterTimeInterval, 'text-center': true}">
+        [ngClass]="{'invisible': index % visibleFooterTimeInterval, 'text-center': true, 'text-nowrap': true}">
         {{time.datePart}}
         <br />
         {{time.timePart}}
