--- a/src/app/search/search-table/search-table.component.html
+++ b/src/app/search/search-table/search-table.component.html
@@ -89,7 +89,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
         <mat-paginator
-            [pageSizeOptions]="[10, 20, 50]"
+            [pageSizeOptions]="pageSizeOptions"
             [pageSize]="pageSize"
             [length]="pageTotal"
             showFirstLastButtons
