--- a/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
+++ b/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
@@ -81,7 +81,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
   <mat-paginator
-    [pageSizeOptions]="[5, 10, 20]"
+    [pageSizeOptions]="pageSizeOptions"
     [pageSize]="pageSize"
     [length]="resultsLength"
     showFirstLastButtons
