Fix generic http url overlap on chromium and webkit browsers

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -36,7 +36,7 @@
                 <mat-divider></mat-divider>
                 <p>
                     <strong>{{ 'IOTDEVICE.GENERIC_HTTP.APIKEY' | translate }}</strong>
-                    <span class="pre">{{ getGenericHttpDeviceUrl(device) }}</span>
+                    <span class="pre text-break">{{ httpDeviceUrl }}</span>
                 </p>
             </ng-container>
             <!-- Comment -->
