--- a/src/app/applications/datatarget/fiware/fiware-detail/fiware-detail.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-detail/fiware-detail.component.html
@@ -10,7 +10,7 @@
             <mat-divider></mat-divider>
             <p><strong>Context Broker</strong>{{datatarget.url}}</p>
             <p><strong>{{ 'DATATARGET.TIMEOUT' | translate }}</strong>{{datatarget.timeout}}</p>
-            <p><strong>{{ 'DATATARGET.TYPE' | translate }}</strong>{{'DATATARGET.' + datatarget.type | translate}}</p>
+            <p><strong>{{ 'DATATARGET.TYPE' | translate }}</strong>{{'DATATARGET.' + datatarget.type + '.TYPE' | translate}}</p>
             <mat-divider></mat-divider>
 
             <p><strong>{{ 'DATATARGET.TENANT' | translate }}</strong></p>
