--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -34,7 +34,7 @@
       <ng-container matColumnDef="menu">
         <th mat-header-cell *matHeaderCellDef class="col-1"></th>
         <td mat-cell *matCellDef="let element">
-          <div class="dropdown" *ngIf="canEdit">
+          <div class="dropdown" *ngIf="element?.id | canEditApplication">
             <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
               data-toggle="dropdown" aria-expanded="false"
               [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
