--- a/src/app/device-model/device-model-list/device-model-list.component.html
+++ b/src/app/device-model/device-model-list/device-model-list.component.html
@@ -1,6 +1,6 @@
 <app-top-bar [title]="'NAV.DEVICE-MODEL' | translate" [ctaLabel]="'FORM.CREATE-NEW-DEVICE-MODEL' | translate"
   [ctaRouterLink]="'device-model-edit'"
-  [canEdit]="canEdit">
+  [canEdit]="true">
 </app-top-bar>
 <div class="container-fluid">
   <div class="row">
