--- a/src/app/admin/users/user-page/user-page.component.html
+++ b/src/app/admin/users/user-page/user-page.component.html
@@ -32,16 +32,10 @@
               </li>
             </ul>
           </div>
-          <div class="form-group mt-3">
-            <mat-form-field appearance="outline">
-              <mat-label
-                *ngIf="checkForRemainingOrganizations; else noMultiOrgs"
-                >{{ 'NAV.ORGANISATIONS' | translate }}</mat-label
-              >
-              <ng-template #noMultiOrgs>
-                <mat-label>{{ 'USER_PAGE.NO_ORGS' | translate }}</mat-label>
-              </ng-template>
+          <div class="form-group mt-3 mb-5">
               <mat-select
+                class="form-control"
+                [placeholder]="(!checkForRemainingOrganizations ? 'USER_PAGE.NO_ORGS' : 'NAV.ORGANISATIONS') | translate"
                 multiple
                 name="organizations"
                 [compareWith]="compare"
@@ -54,15 +48,14 @@
                 ></mat-select-search>
 
                 <mat-option
-                  *ngFor="let org of filteredOrganisations | async"
+                  *ngFor="let org of filteredOrganisations | async | sortBy:'name'"
                   [value]="org"
                   >{{ org.name }}</mat-option
                 >
               </mat-select>
-            </mat-form-field>
           </div>
           <div class="form-group mt-3">
-            <button class="btn btn-primary ml-2" type="submit">
+            <button class="btn btn-primary" type="submit">
               {{ 'USERS.SAVE' | translate }}
             </button>
           </div>
