--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -1,99 +1,104 @@
 <div *ngIf="gateway">
-    <app-top-bar [data]="gateway" [backButton]="backButton" [subPage]="true" [addDetailDowndown]="true"
-        [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeleteGateway()" [canEdit]="canEdit"></app-top-bar>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6 d-flex align-items-stretch">
-                <div class="jumbotron jumbotron--m-right jumbotron--full-width">
-                    <h3>{{ 'GATEWAY.DETAILS' | translate }}</h3>
-                    <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.id}}</p>
-                    <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.internalOrganizationName}}</p>
-                    <app-general-details [data]="gateway"></app-general-details>
-                    <p><strong>{{ 'GATEWAY.TAGS' | translate }}</strong>{{gateway.tagsString}}</p>
-                    <p *ngIf="gateway.description">
-                        <strong>{{ 'GATEWAY.DESCRIPTION' | translate }}</strong></p>
-                    <pre><p>{{gateway.description}}</p></pre>
-                </div>
-            </div>
-            <div class="col-md-6 d-flex align-items-stretch">
-                <div class="jumbotron jumbotron--m-left jumbotron--full-width">
-                    <div *ngIf="gateway.location; else locationElseBlock">
-                        <h3>{{ 'GATEWAY.LOCATION' | translate }}</h3>
-                        <app-map [coordinates]="getCoordinates()"></app-map>
-                        <div class="row">
-                            <div class="col-4">
-                                <p><strong>{{ 'GATEWAY.LONGITUDE' | translate }}</strong>
-                                    {{gateway.location?.longitude | number:'2.1-6'}}</p>
-                            </div>
-                            <div class="col-4">
-                                <p><strong>{{ 'GATEWAY.LATITUDE' | translate }}</strong>
-                                    {{gateway.location.latitude | number:'2.1-6'}}</p>
-                            </div>
-                            <div class="col-4">
-                                <p><strong>{{ 'GATEWAY.ALTITUDE' | translate }}</strong>
-                                    {{gateway.location.altitude | number:'2.1-6'}}</p>
-                            </div>
-                        </div>
-                    </div>
-                    <ng-template #locationElseBlock>
-                        <p class="mb-5">{{ 'GATEWAY.NOLOCATION' | translate}}</p>
-                    </ng-template>
-                </div>
-            </div>
+  <app-top-bar [data]="gateway" [backButton]="backButton" [subPage]="true" [addDetailDowndown]="true"
+    [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeleteGateway()" [canEdit]="canEdit"></app-top-bar>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 d-flex align-items-stretch">
+        <div class="jumbotron jumbotron--m-right jumbotron--full-width">
+          <h3>{{ 'GATEWAY.DETAILS' | translate }}</h3>
+          <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.id}}</p>
+          <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.internalOrganizationName}}</p>
+          <app-general-details [data]="gateway"></app-general-details>
+          <p><strong>{{ 'GATEWAY.TAGS' | translate }}</strong>{{gateway.tagsString}}</p>
+          <p *ngIf="gateway.description">
+            <strong>{{ 'GATEWAY.DESCRIPTION' | translate }}</strong>
+          </p>
+          <pre><p>{{gateway.description}}</p></pre>
         </div>
+      </div>
+      <div class="col-md-6 d-flex align-items-stretch">
+        <div class="jumbotron jumbotron--m-left jumbotron--full-width">
+          <div *ngIf="gateway.location; else locationElseBlock">
+            <h3>{{ 'GATEWAY.LOCATION' | translate }}</h3>
+            <app-map [coordinates]="getCoordinates()"></app-map>
+            <div class="row">
+              <div class="col-4">
+                <p><strong>{{ 'GATEWAY.LONGITUDE' | translate }}</strong>
+                  {{gateway.location?.longitude | number:'2.1-6'}}</p>
+              </div>
+              <div class="col-4">
+                <p><strong>{{ 'GATEWAY.LATITUDE' | translate }}</strong>
+                  {{gateway.location.latitude | number:'2.1-6'}}</p>
+              </div>
+              <div class="col-4">
+                <p><strong>{{ 'GATEWAY.ALTITUDE' | translate }}</strong>
+                  {{gateway.location.altitude | number:'2.1-6'}}</p>
+              </div>
+            </div>
+          </div>
+          <ng-template #locationElseBlock>
+            <p class="mb-5">{{ 'GATEWAY.NOLOCATION' | translate}}</p>
+          </ng-template>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
-<div class="row">
+<div class="container-fluid">
+  <div class="row">
     <div class="col-12">
-        <div class="jumbotron">
-          <app-gateway-status [isVisibleSubject]="isGatewayStatusVisibleSubject" [gatewayId]="id" paginatorClass="d-none"
-              [shouldLinkToDetails]="false" [title]="'GATEWAY.ONLINE-STATUS' | translate">
-            </app-gateway-status>
+      <div class="jumbotron">
+        <app-gateway-status [isVisibleSubject]="isGatewayStatusVisibleSubject" [gatewayId]="id" paginatorClass="d-none"
+          [shouldLinkToDetails]="false" [title]="'GATEWAY.ONLINE-STATUS' | translate">
+        </app-gateway-status>
+      </div>
+
+      <div class="jumbotron">
+        <h3>{{ 'GATEWAY.DATA-PACKETS' | translate }}</h3>
+        <div class="loading-shade" *ngIf="isLoadingResults">
+          <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
         </div>
 
-        <div class="jumbotron">
-            <h3>{{ 'GATEWAY.DATA-PACKETS' | translate }}</h3>
-            <div class="loading-shade" *ngIf="isLoadingResults">
-                <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-            </div>
-
-            <div class="row mb-4">
-              <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
-                <app-graph [data]="receivedGraphData" [type]="'line'" [title]="'GATEWAY.STATS-RXPACKETSRECEIVED' | translate"
-                  [graphCardClass]="'shadow-none pl-0'" [graphHeaderClass]="'mat-card-header-text-ml-0'">
-                </app-graph>
-              </div>
-              <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
-                <app-graph [data]="sentGraphData" [type]="'line'" [title]="'GATEWAY.STATS-TXPACKETSEMITTED' | translate"
-                  [graphCardClass]="'shadow-none pl-0'" [graphHeaderClass]="'mat-card-header-text-ml-0'">
-                </app-graph>
-              </div>
-            </div>
-
-            <table mat-table [dataSource]="dataSource">
-                <ng-container matColumnDef="rxPacketsReceived">
-                    <th mat-header-cell *matHeaderCellDef>
-                        {{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}
-                    </th>
-                    <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="txPacketsEmitted">
-                    <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}
-                    </th>
-                    <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="txPacketsReceived">
-                    <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
-                    <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-            <mat-paginator [length]="resultLength" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" showFirstLastButtons>
-            </mat-paginator>
+        <div class="row mb-4">
+          <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
+            <app-graph [data]="receivedGraphData" [type]="'line'"
+              [title]="'GATEWAY.STATS-RXPACKETSRECEIVED' | translate" [graphCardClass]="'shadow-none pl-0'"
+              [graphHeaderClass]="'mat-card-header-text-ml-0'">
+            </app-graph>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch mt-1 mb-4">
+            <app-graph [data]="sentGraphData" [type]="'line'" [title]="'GATEWAY.STATS-TXPACKETSEMITTED' | translate"
+              [graphCardClass]="'shadow-none pl-0'" [graphHeaderClass]="'mat-card-header-text-ml-0'">
+            </app-graph>
+          </div>
         </div>
+
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="rxPacketsReceived">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="txPacketsEmitted">
+            <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
+          </ng-container>
+
+          <ng-container matColumnDef="txPacketsReceived">
+            <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [length]="resultLength" [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize"
+          showFirstLastButtons>
+        </mat-paginator>
+      </div>
     </div>
+  </div>
 </div>
