--- a/src/app/admin/users/accept-user/accept-user.component.html
+++ b/src/app/admin/users/accept-user/accept-user.component.html
@@ -1,8 +1,5 @@
 <div *ngIf="user">
-  <app-top-bar
-    [backButtonTitle]="backButtonTitle"
-    [title]="title"
-  ></app-top-bar>
+  <app-top-bar [backButtonTitle]="backButtonTitle" [title]="title"></app-top-bar>
 
   <form (ngSubmit)="onSubmit()" class="os2-form p-3 mt-4">
     <div *ngIf="errorMessages" class="error-messages p-3">
@@ -19,32 +16,28 @@
             <h3>
               {{ 'USERS.ACCEPT-USER.QUESTION-ACCEPT' | translate }}
               {{ user.name }}
+              <ng-container *ngIf="organizationName">
+                {{ 'USERS.ACCEPT-USER.IN-ORGANIZATION' | translate }}
+                {{ organizationName}}
+              </ng-container>
             </h3>
             <mat-divider></mat-divider>
 
             <div class="form-group mt-3 col-12">
               <label class="form-label" for="level">{{
                 'PERMISSION.EDIT.TYPE' | translate
-              }}</label
-              >*
-              <mat-select id="permissionIds" class="form-control" name="permissionIds"
-                required
-                [formControl]="permissionsCtrl"
-                [(value)]="permission.permissionIds"
+                }}</label>*
+              <mat-select id="permissionIds" class="form-control" name="permissionIds" required
+                [formControl]="permissionsCtrl" [(value)]="permission.permissionIds"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('permissionIds'), 'is-valid' : formFailedSubmit && !errorFields.includes('permissionIds')}"
-                [placeholder]="'PERMISSION.EDIT.TYPE-PLACEHOLDER' | translate"
-                [multiple]="true">
+                [placeholder]="'PERMISSION.EDIT.TYPE-PLACEHOLDER' | translate" [multiple]="true">
                 <mat-option *ngFor="let permission of permissions" [value]="permission.id">
                   {{ permission.name }}
                 </mat-option>
               </mat-select>
             </div>
             <div class="form-group mt-5">
-              <button
-                (click)="routeBack()"
-                class="btn btn-secondary"
-                type="button"
-              >
+              <button (click)="routeBack()" class="btn btn-secondary" type="button">
                 {{ 'GEN.CANCEL' | translate }}
               </button>
               <button class="btn btn-primary ml-2" type="submit">
