--- a/src/app/gateway/gateway-status/gateway-status.component.html
+++ b/src/app/gateway/gateway-status/gateway-status.component.html
@@ -19,6 +19,7 @@
   </div>
   <table #gatewayStatus mat-table [dataSource]="dataSource" class="status-table"
     *ngIf="dataSource?.data.length && timeColumns.length; else noGatewayStatusData">
+    <!-- Gateway name is the first column -->
     <ng-container matColumnDef="gatewayName">
       <td mat-cell *matCellDef="let element">
         <a [routerLink]="'/gateways/gateway-detail/' + element.id" routerLinkActive="active" *ngIf="shouldLinkToDetails">{{element.name}}</a>
@@ -31,6 +32,7 @@
       </td>
     </ng-container>
 
+    <!-- Timestamp columns which are dynamically generated -->
     <ng-container *ngFor="let time of timeColumns; let index = index" matColumnDef="{{time.exactTimestamp}}">
       <td mat-cell *matCellDef="let gateway"
         [matTooltip]="!!gateway.statusTimestamps.length | gatewayStatusTooltip: neverSeenText:timestampText:time.tooltip:nameText:gateway.name"
@@ -44,6 +46,7 @@
       </td>
     </ng-container>
 
+    <!-- The columns for a row must be an array of simple types (string, number, ...) -->
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
   </table>
