--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-12">
           <div class="jumbotron--table">
-            <app-applications-table [organizationId]="organizationId"></app-applications-table>
+            <app-applications-table [organizationId]="organizationId" *ngIf="organizationId"></app-applications-table>
           </div>
         </div>
       </div>
