--- a/src/app/admin/users/new-kombit-user-page/new-user.component.html
+++ b/src/app/admin/users/new-kombit-user-page/new-user.component.html
@@ -7,7 +7,7 @@
         <h1>
           {{ 'NEW_USER.FIRST_LOGIN' | translate }}
         </h1>
-        <form (ngSubmit)="onSubmit()" #newUserForm="ngForm" class="p-3 mt-4">
+        <form (ngSubmit)="onSubmit()" #newUserForm="ngForm">
           <div *ngIf="errorMessages" class="error-messages p-3">
             <ul class="mb-0">
               <li *ngFor="let error of errorMessages">
@@ -15,55 +15,50 @@
               </li>
             </ul>
           </div>
-          <div class="row">
-            <div class="form-group mt-3">
-              <label class="form-label" for="createNewKombitUserDto.email">{{
-                'USERS.EMAIL' | translate
-              }}</label
-              >*
+          <div class="form-group mt-3">
+            <label class="form-label" for="createNewKombitUserDto.email">{{
+              'USERS.EMAIL' | translate
+            }}</label
+            >*
 
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                maxlength="50"
-                required
-                name="email"
-                [(ngModel)]="createNewKombitUserFromFrontend.email"
-                [ngClass]="{
-                  'is-invalid':
-                    formFailedSubmit && errorFields.includes('email'),
-                  'is-valid': formFailedSubmit && !errorFields.includes('email')
-                }"
-              />
-            </div>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              maxlength="50"
+              required
+              name="email"
+              [(ngModel)]="createNewKombitUserFromFrontend.email"
+              [ngClass]="{
+                'is-invalid':
+                  formFailedSubmit && errorFields.includes('email'),
+                'is-valid': formFailedSubmit && !errorFields.includes('email')
+              }"
+            />
+          </div>
 
-            <div class="form-group mt-3 mb-4 col-12">
-              <label class="form-label" for="organisations">{{'NAV.ORGANISATIONS' | translate}}</label>*
-              <mat-select
-                id="organisations"
-                name="organisations"
-                class="form-control"
-                [placeholder]="'NAV.ORGANISATIONS' | translate"
-                [multiple]="true"
-                [compareWith]="compare"
-                [(ngModel)]="
-                  createNewKombitUserFromFrontend.requestedOrganizations
-                "
-                panelClass="overflow-x-hidden"
-                aria-required="true"
+          <div class="form-group mt-3 mb-5">
+            <label class="form-label" for="new-organisations">{{'NAV.ORGANISATIONS' | translate}}</label>*
+            <mat-select
+              class="form-control"
+              [placeholder]="'NAV.ORGANISATIONS' | translate"
+              [multiple]="true"
+              name="new-organisations"
+              [compareWith]="compare"
+              [(ngModel)]="createNewKombitUserFromFrontend.requestedOrganizations"
+              panelClass="overflow-x-hidden"
+              aria-required="true"
+            >
+              <mat-select-search
+                [formControl]="organisationsFilterCtrl"
+              ></mat-select-search>
+
+              <mat-option
+                *ngFor="let org of filteredOrganisations | async"
+                [value]="org"
+                >{{ org.name }}</mat-option
               >
-                <mat-select-search
-                  [formControl]="organisationsFilterCtrl"
-                ></mat-select-search>
-
-                <mat-option
-                  *ngFor="let org of filteredOrganisations | async"
-                  [value]="org"
-                  >{{ org.name }}</mat-option
-                >
-                </mat-select>
-            </div>
+              </mat-select>
           </div>
           <div class="form-group mt-3">
             <button class="btn btn-primary" type="submit">
